<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="96dp"
        android:allowUndo="false"
        android:fontFamily="@font/new_font"
        android:text="@string/text1"
        android:textColor="@color/yellow"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/new_font"
        android:text="@string/text2"
        android:textColor="@color/yellow"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.328">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="90dp"
            android:layout_height="60sp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/btn_background"
            android:onClick="btn1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@mipmap/btn1" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="90dp"
            android:layout_height="60sp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/btn_background"
            app:layout_constraintStart_toEndOf="@+id/imageButton"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/btn2" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="90dp"
            android:layout_height="60sp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageButton2"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/btn3" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="90dp"
            android:layout_height="60sp"
            android:layout_marginTop="25dp"
            android:background="@drawable/btn_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:srcCompat="@mipmap/btn4"
            android:layout_marginLeft="20dp"
            app:layout_goneMarginTop="25dp"
            />

        <ImageButton
            android:id="@+id/imageButton6"
            android:layout_width="90dp"
            android:layout_height="60sp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/btn_background"
            app:layout_constraintStart_toEndOf="@+id/imageButton4"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:srcCompat="@mipmap/btn5" />

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="90dp"
            android:layout_height="60sp"
            android:background="@drawable/btn_background"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"
            app:layout_constraintStart_toEndOf="@+id/imageButton6"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:srcCompat="@mipmap/btn6" />

        <ImageButton
            android:id="@+id/imageButton7"
            android:layout_width="90dp"
            android:layout_height="60sp"
            android:background="@drawable/btn_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:srcCompat="@mipmap/btn7"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            />

        <ImageButton
            android:id="@+id/imageButton8"
            android:layout_width="90dp"
            android:layout_height="60sp"
            android:background="@drawable/btn_background"
            app:layout_constraintStart_toEndOf="@+id/imageButton7"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:srcCompat="@mipmap/btn8"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="30dp"/>

        <ImageButton
            android:id="@+id/imageButton9"
            android:layout_width="90dp"
            android:layout_height="60sp"
            android:background="@drawable/btn_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageButton8"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:srcCompat="@mipmap/btn9"
            android:layout_marginTop="25dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="30sp"/>

        <TextView
            android:id="@+id/textView2"
            style="@style/Widget.AppCompat.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/new_font"
            android:text="@string/lotto1"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="13dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"

            android:fontFamily="@font/new_font"
            android:text="@string/lotto2"
            android:textColor="@color/black"
            android:textSize="13dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/imageButton2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/new_font"
            android:text="@string/lotto3"
            android:textColor="@color/black"
            android:textSize="13dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/new_font"
            android:text="@string/lotto5"
            android:textColor="@color/black"
            android:textSize="13dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/new_font"
            android:text="@string/lotto4"
            android:textColor="@color/black"
            android:textSize="13dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/textView7"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/imageButton6" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/new_font"
            android:text="@string/lotto6"
            android:textColor="@color/black"
            android:textSize="13dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton5" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/new_font"
            android:text="@string/lotto7"
            android:textColor="@color/black"
            android:textSize="13dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton7" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/new_font"
            android:text="@string/Lotto8"
            android:textColor="@color/black"
            android:textSize="13dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView10"
            app:layout_constraintHorizontal_bias="0.266"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/imageButton8"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/new_font"
            android:text="@string/Lotto9"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="13dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton9"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>